/**
Файла для генерации типов данных отображающие бизнес логику
 */
syntax = "proto3";

package businessTypes;

import "types/custom_types.proto";

option java_multiple_files = true;
option java_package = "ru.business_types";

message Process {
  customTypes.ProtoUUID requestId = 1;
  string processName = 2;
  customTypes.ProtoBigDecimal sum = 3;
}

message ProcessStatus {
  int32 statusCode = 1;
  string description = 2;
}